@@ -1,6 +1,6 @@
 /* gcompris - wordsgame.c
  *
- * Time-stamp: <2005/09/21 23:12:17 yves>
+ * Time-stamp: <2005/09/25 09:44:21 yves>
  *
  * Copyright (C) 2000 Bruno Coudoin
  * 
@@ -724,8 +724,9 @@ static FILE *get_wordfile(const char *locale)
 
   if(wordsfd==NULL)
     {
+      g_free(filename);
       /* Second Try to find a file matching the 'max' and the locale */
-      sprintf(filename, "%s%s%.2s",  
+      filename = g_strdup_printf("%s%s%.2s",  
 	      PACKAGE_DATA_DIR, "/wordsgame/wordslevelmax.", 
 	      locale);
       g_message("Trying to open file %s ", filename);
